--- a/package.json
+++ b/package.json
@@ -1,11 +1,32 @@
 {
-  "name": "create-react-web",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Leif Marcus",
-  "license": "ISC"
+    "name": "create-react-web",
+    "version": "0.1.0",
+    "description": "",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/leifmarcus/create-react-web.git"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "bin": {
+        "create-react-web": "./cli.js"
+    },
+    "author": "Leif Marcus",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^5.13.0",
+        "eslint-config-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^3.0.1",
+        "eslint-plugin-react": "^7.12.4",
+        "prettier": "^1.16.4",
+        "prettier-eslint": "^8.8.2"
+    },
+    "dependencies": {
+        "babel-eslint": "^10.0.1",
+        "minimist": "^1.2.0",
+        "parse-git-config": "^3.0.0",
+        "readline-sync": "^1.4.9"
+    }
 }
