--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "create-react-web",
-    "version": "0.1.1",
+    "name": "@leifmarcus/create-react-web",
+    "version": "0.1.0",
     "description": "",
     "main": "index.js",
     "repository": {
