--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@leifmarcus/create-react-web",
-    "version": "0.1.0",
+    "name": "@leif_marcus/create-react-web",
+    "version": "0.1.2",
     "description": "",
     "main": "index.js",
     "repository": {
@@ -15,15 +15,13 @@
     },
     "author": "Leif Marcus",
     "license": "ISC",
-    "devDependencies": {
+    "dependencies": {
         "eslint": "^5.13.0",
         "eslint-config-prettier": "^4.0.0",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
         "prettier": "^1.16.4",
-        "prettier-eslint": "^8.8.2"
-    },
-    "dependencies": {
+        "prettier-eslint": "^8.8.2",
         "babel-eslint": "^10.0.1",
         "minimist": "^1.2.0",
         "parse-git-config": "^3.0.0",
