--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
     "name": "@leif_marcus/create-react-web",
     "version": "0.1.3",
-    "description": "",
+    "description": "generates simple react boilerplate including simple example components",
+    "keywords": [
+        "react",
+        "boilderplate",
+        "redux",
+        "react-redux",
+        "react-router",
+        "build tool",
+        "generator"
+    ],
     "main": "index.js",
     "repository": {
         "type": "git",
@@ -17,6 +26,10 @@
     "license": "ISC",
     "engines": {
         "node": ">=10.14.1"
+    },
+    "config": {
+        "global": true,
+        "description": true
     },
     "dependencies": {
         "babel-eslint": "^10.0.1",
