--- a/.eslintrc
+++ b/.eslintrc
@@ -20,23 +20,61 @@
         "es6": true
     },
     "settings": {},
-    "extends": ["eslint:recommended", "prettier"],
-    "plugins": ["prettier"],
+    "extends": [
+        "eslint:recommended",
+        "prettier"
+    ],
+    "plugins": [
+        "prettier"
+    ],
     "rules": {
-        "array-bracket-spacing": [2, "always"],
+        "array-bracket-spacing": [
+            2,
+            "always"
+        ],
         "arrow-spacing": 2,
-        "block-spacing": [2, "always"],
-        "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+        "block-spacing": [
+            2,
+            "always"
+        ],
+        "brace-style": [
+            "error",
+            "1tbs",
+            {
+                "allowSingleLine": true
+            }
+        ],
         "camelcase": 2,
-        "comma-dangle": [2, "always-multiline"],
+        "comma-dangle": [
+            2,
+            "always-multiline"
+        ],
         "comma-style": 2,
-        "comma-spacing": [2, { "before": false, "after": true }],
-        "computed-property-spacing": [2, "always"],
-        "consistent-this": [2, "self"],
+        "comma-spacing": [
+            2,
+            {
+                "before": false,
+                "after": true
+            }
+        ],
+        "computed-property-spacing": [
+            2,
+            "always"
+        ],
+        "consistent-this": [
+            2,
+            "self"
+        ],
         "constructor-super": 2,
         "eol-last": 2,
         "func-call-spacing": 2,
-        "func-style": [2, "declaration", { "allowArrowFunctions": true }],
+        "func-style": [
+            2,
+            "declaration",
+            {
+                "allowArrowFunctions": true
+            }
+        ],
         "indent": 2,
         "jsx-quotes": 2,
         "key-spacing": [
@@ -48,17 +86,41 @@
                 "align": "colon"
             }
         ],
-        "keyword-spacing": [2, { "before": true, "after": true }],
-        "linebreak-style": [2, "unix"],
-        "max-len": ["error", { "ignoreUrls": true, "code": 120 }],
-        "max-statements": [2, 60],
+        "keyword-spacing": [
+            2,
+            {
+                "before": true,
+                "after": true
+            }
+        ],
+        "linebreak-style": [
+            2,
+            "unix"
+        ],
+        "max-len": [
+            "error",
+            {
+                "ignoreUrls": true,
+                "code": 120
+            }
+        ],
+        "max-statements": [
+            2,
+            60
+        ],
         "new-cap": 2,
         "new-parens": 2,
         "newline-before-return": 2,
         "no-console": 0,
         "no-const-assign": 2,
         "no-else-return": 2,
-        "no-extra-parens": [2, "all", { "nestedBinaryExpressions": false }],
+        "no-extra-parens": [
+            2,
+            "all",
+            {
+                "nestedBinaryExpressions": false
+            }
+        ],
         "no-extra-semi": 2,
         "no-find-dom-node": 0,
         "no-lonely-if": 2,
@@ -67,7 +129,12 @@
         "no-param-reassign": 2,
         "no-underscore-dangle": 0,
         "no-unneeded-ternary": 2,
-        "no-unused-vars": [2, { "argsIgnorePattern": "^_" }],
+        "no-unused-vars": [
+            2,
+            {
+                "argsIgnorePattern": "^_"
+            }
+        ],
         "no-useless-rename": 2,
         "no-var": 2,
         "no-whitespace-before-property": 2,
@@ -78,12 +145,20 @@
                     "multiline": false,
                     "minProperties": 1
                 },
-                "ObjectPattern": { "multiline": true }
+                "ObjectPattern": {
+                    "multiline": true
+                }
             }
         ],
-        "object-curly-spacing": [2, "always"],
+        "object-curly-spacing": [
+            2,
+            "always"
+        ],
         "object-property-newline": 2,
-        "one-var": [2, "never"],
+        "one-var": [
+            2,
+            "never"
+        ],
         "prefer-arrow-callback": 2,
         "prefer-const": [
             2,
@@ -93,7 +168,10 @@
             }
         ],
         "prefer-template": 2,
-        "quotes": [2, "single"],
+        "quotes": [
+            2,
+            "single"
+        ],
         "require-jsdoc": [
             2,
             {
@@ -115,7 +193,10 @@
                 "anonymous": "always"
             }
         ],
-        "space-in-parens": [2, "always"],
+        "space-in-parens": [
+            2,
+            "always"
+        ],
         "space-infix-ops": 2,
         "space-unary-ops": 2,
         "template-curly-spacing": 2,
